--- a/css/modules/modal.css
+++ b/css/modules/modal.css
@@ -10,7 +10,7 @@
 .modal-action {
   margin-top: -220px;
   margin-right: -20px;
-  font-family: sans-serif; }
+  font-family: 'Cabin', sans-serif; }
 
 .modalImage {
   width: 300px;
@@ -18,11 +18,11 @@
   margin-left: 20%; }
 
 .price {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 h4 {
-  font-family: 'Nunito', sans-serif; }
+  font-family: 'Cabin', sans-serif; }
 
 .trip-cost > p {
   text-align: center;
@@ -30,7 +30,7 @@ h4 {
   font-size: 30px;
   color: white;
   margin-bottom: 0px;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   border: 1px solid black;
   border-bottom: none; }
 
@@ -49,12 +49,12 @@ h4 {
 
 .modal-button {
   top: 152%;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 .modal-button2 {
   top: 152%;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 /*# sourceMappingURL=modal.css.map */
