--- a/sass/modules/modal.scss
+++ b/sass/modules/modal.scss
@@ -11,7 +11,7 @@
 .modal-action{
 	margin-top: -220px;
 	margin-right: -20px;
-	font-family: sans-serif;
+	font-family: 'Cabin', sans-serif;
 }
 .modalImage{
 	width:300px;
@@ -20,13 +20,13 @@
 	
 }
 .price{
-	font-family:  'Nunito', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	font-size: 20px;
 }
 
 
 h4{
-	font-family:  'Nunito', sans-serif;
+	font-family: 'Cabin', sans-serif;
 }
 .trip-cost > p{
 	text-align: center;
@@ -34,7 +34,7 @@ h4{
 	font-size: 30px;
 	color: white;
 	margin-bottom: 0px;
-	font-family:  'Nunito', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	border: 1px solid black;
 	border-bottom: none;
 	
@@ -55,12 +55,12 @@ h4{
 }
 .modal-button{
 	top:152%;
-	font-family:  'Nunito', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	font-size: 20px;
 }
 .modal-button2{
 	top:152%;
-	font-family:  'Nunito', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	font-size: 20px;
 }
 
