--- a/sass/modules/slider.scss
+++ b/sass/modules/slider.scss
@@ -20,7 +20,7 @@
   height: 150px;
 }
 .slide-h3 > p{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   color: black;
   font-size: 15px;
   margin-left: -64px;
