--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
   height: 150px; }
 
 .slide-h3 > p {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   color: black;
   font-size: 15px;
   margin-left: -64px;
@@ -47,16 +47,16 @@
   margin-right: 150px; }
 
 .form-container {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Cabin', sans-serif;
   font-size: 30px;
-  color: white;
+  color: #2A2A2A;
   text-align: center;
-  width: 80%;
+  width: 50%;
   height: 350px;
-  background-color: #76b2b7;
+  background-color: #e0e0e2;
   position: relative;
-  margin-left: 10%;
-  margin-top: 15%; }
+  margin-left: 25%;
+  margin-top: 10%; }
 
 .contain {
   width: 0%;
@@ -64,43 +64,43 @@
 
 h3 {
   position: absolute;
-  left: 20%; }
+  left: 15%; }
 
 [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:after {
-  background-color: white; }
+  background-color: #2A2A2A; }
 
 [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:before, [type="radio"].with-gap:checked + label:after {
-  border: 2px solid white; }
+  border: 2px solid #2A2A2A; }
 
 [type="radio"]:not(:checked) + label:before, [type="radio"]:not(:checked) + label:after {
-  border: 2px solid white; }
+  border: 2px solid #2A2A2A; }
 
 [type="radio"]:not(:checked) + label, [type="radio"]:checked + label {
-  font-family: 'Nunito', sans-serif;
-  color: white;
+  font-family: 'Cabin', sans-serif;
+  color: #2A2A2A;
   font-size: 25px;
   letter-spacing: 1px;
   line-height: 1.2; }
 
 #one {
   position: absolute;
-  top: 80px;
-  left: 80px; }
+  top: 22%;
+  left: 21%; }
 
 #two {
   position: absolute;
-  top: 80px;
-  left: 330px; }
+  top: 22%;
+  left: 55%; }
 
 #three {
   position: absolute;
-  top: 170px;
-  left: 80px; }
+  top: 48%;
+  left: 21%; }
 
 #four {
   position: absolute;
-  top: 170px;
-  left: 330px; }
+  top: 48%;
+  left: 55%; }
 
 #formTwo {
   display: none; }
@@ -144,13 +144,13 @@ h3 {
   position: absolute;
   top: 80%;
   border-radius: 10px;
-  background-color: #5CB85C;
+  background-color: #f2a22b;
   width: 136px;
   height: 48px;
   font-size: 25px; }
 
 .btn-large:hover {
-  background-color: #5CB85C; }
+  background-color: #f2a22b; }
 
 .previous {
   left: 50px; }
@@ -287,7 +287,7 @@ label > input:checked + img {
   right: 20px;
   top: 270px;
   font-size: 15px;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   width: 320px; }
 
 #vehicleThree {
@@ -310,7 +310,7 @@ label > input:checked + img {
 
 #error-message {
   display: none;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 30px;
   color: white; }
 
@@ -342,7 +342,7 @@ label > input:checked + img {
 .modal-action {
   margin-top: -220px;
   margin-right: -20px;
-  font-family: sans-serif; }
+  font-family: 'Cabin', sans-serif; }
 
 .modalImage {
   width: 300px;
@@ -350,11 +350,11 @@ label > input:checked + img {
   margin-left: 20%; }
 
 .price {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 h4 {
-  font-family: 'Nunito', sans-serif; }
+  font-family: 'Cabin', sans-serif; }
 
 .trip-cost > p {
   text-align: center;
@@ -362,7 +362,7 @@ h4 {
   font-size: 30px;
   color: white;
   margin-bottom: 0px;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   border: 1px solid black;
   border-bottom: none; }
 
@@ -381,12 +381,12 @@ h4 {
 
 .modal-button {
   top: 152%;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 .modal-button2 {
   top: 152%;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
 html {
@@ -394,48 +394,34 @@ html {
   height: 100vh; }
 
 body {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Cabin', sans-serif;
   width: 100vw;
   height: 100vh;
   margin: 0 auto; }
 
 #splash-page {
-  background-color: #76b2b7;
+  background-color: #e0e0e2;
   width: 100vw;
   height: 100vh;
   position: absolute;
-  z-index: 2; }
-
-#header2 {
-  font-size: 120px;
-  top: 40%;
-  left: 24%; }
+  z-index: 2;
+  display: none; }
 
 #logo2 {
-  width: 270px;
-  height: 200px;
   position: absolute;
-  top: 20%;
-  left: 34%; }
-
-#logo-words2 {
-  font-family: 'Amatic SC', cursive;
-  color: white;
-  position: absolute;
-  font-size: 40px;
-  left: 34%;
-  top: 35%; }
+  top: 25%;
+  left: 35%; }
 
 #begin {
   color: white;
   border-radius: 10px;
-  border: #5CB85C;
+  border: #f2a22b;
   text-align: center;
-  background-color: #5CB85C;
+  background-color: #f2a22b;
   -webkit-tap-highlight-color: transparent;
   position: absolute;
   top: 70%;
-  left: 35%;
+  left: 41%;
   width: 200px;
   height: 60px;
   font-size: 40px;
@@ -446,7 +432,6 @@ body {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  display: none;
   grid-template-columns: repeat(3, 1fr); }
 
 .page-container {
@@ -457,7 +442,7 @@ body {
 
 #header {
   height: 20vh;
-  background-color: #76b2b7;
+  background-color: #e0e0e2;
   grid-column: 1/6; }
 
 #body {
@@ -467,46 +452,27 @@ body {
 
 #footer {
   height: 10vh;
-  background-color: #76b2b7;
+  background-color: #e0e0e2;
   grid-column: 1/6; }
-
-h1 {
-  font-family: 'Amatic SC', cursive;
-  color: white;
-  position: absolute;
-  left: 36%;
-  font-size: 80px;
-  font-weight: 400; }
 
 #about {
   width: 80%;
   margin: 0 auto;
-  margin-top: 30px;
-  font-family: 'Nunito', sans-serif;
-  font-size: 20px;
+  margin-top: 5%;
+  font-family: 'Cabin', sans-serif;
+  font-size: 22px;
   text-align: center;
-  margin-bottom: 0px; }
+  margin-bottom: 5%; }
 
 #logo {
-  width: 150px;
-  height: 100px;
+  width: 15%;
   position: absolute;
-  left: 5%;
-  top: 8%; }
-
-#logo:hover {
-  transform: scale(1.1); }
-
-#logo-words {
-  font-family: 'Amatic SC', cursive;
-  color: white;
-  position: absolute;
-  bottom: -8%;
-  left: 5%;
-  font-size: 20px; }
+  left: 40%;
+  top: 4%;
+  cursor: pointer; }
 
 .description {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Cabin', sans-serif;
   font-size: 30px;
   position: absolute;
   top: 50%;
@@ -526,5 +492,39 @@ h1 {
 
 #box6 {
   display: none; }
+
+.image-container {
+  margin-top: 5%;
+  height: 15%;
+  width: 90%;
+  padding: 0px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); }
+
+.image1 {
+  grid-column: 1/2; }
+
+.image2 {
+  grid-column: 2/3; }
+
+.image3 {
+  grid-column: 3/4; }
+
+.image4 {
+  grid-column: 4/5; }
+
+.image5 {
+  grid-column: 5/6; }
+
+.image6 {
+  grid-column: 6/7; }
+
+.imagePos {
+  margin-left: 15%;
+  border-radius: 100%; }
+
+h5 {
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
