--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,52 +7,40 @@ html{
   height: 100vh;
 }
 body{
-  font-family:'Amatic SC', cursive;
+  font-family: 'Cabin', sans-serif;
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
 }
 
 #splash-page{
-  background-color: #76b2b7;
+  background-color:  #e0e0e2;
   width:100vw;
   height:100vh;
   position:absolute;
   z-index:2;
+  display: none;
   
 }
 
-#header2{
-  font-size: 120px;
-  top:40%;
-  left:24%;
-}
 
 #logo2{
-  width: 270px;
-  height: 200px;
+  
   position: absolute;
-  top:20%;
-  left:34%;
+  top:25%;
+  left:35%;
 }
-#logo-words2{
-  font-family: 'Amatic SC', cursive;
-  color: white;
-  position: absolute;
-  font-size:40px;
-  left:34%;
-  top:35%;
-}
+
 #begin{
   color:white;
   border-radius: 10px;
-  border: #5CB85C;
+  border: #f2a22b;
   text-align: center;
-  background-color: #5CB85C;
+  background-color:#f2a22b;
   -webkit-tap-highlight-color: transparent;
   position: absolute;
   top: 70%;
-  left:35%;
+  left:41%;
   width:200px;
   height: 60px;
   font-size: 40px;
@@ -68,7 +56,7 @@ body{
   position: absolute;
   width: 100vw;
   height: 100vh;
-  display: none;
+  // display: none;
   grid-template-columns:repeat(3, 1fr);
 
 }
@@ -83,7 +71,7 @@ body{
 }
 #header{
     height: 20vh;
-    background-color: #76b2b7;
+    background-color: #e0e0e2;
     grid-column: 1/6;
 
   }
@@ -94,53 +82,32 @@ body{
 }
 #footer{
    height: 10vh;
-   background-color: #76b2b7;
+   background-color: #e0e0e2;
    grid-column: 1/6;
 }
-  h1 {
-    font-family: 'Amatic SC', cursive;
-    color: white;
-    position: absolute;
-    left:36%;
-    font-size: 80px;
-    font-weight: 400;
-    
-  
-  }
+
   #about{
     width: 80%;
     margin: 0 auto;
-    margin-top: 30px;
-    font-family: 'Nunito', sans-serif;
-    font-size: 20px;
+    margin-top: 5%;
+    font-family: 'Cabin', sans-serif;
+    font-size: 22px;
     text-align: center;
-  
-    margin-bottom:0px;
+    margin-bottom:5%;
 
   }
 
   #logo{
-    width: 150px;
-    height: 100px;
+    width: 15%;
     position: absolute;
-    left:5%;
-    top:8%;
+    left:40%;
+    top:4%;
+    cursor: pointer;
   }
-  #logo:hover{
-   transform: scale(1.1);
-  }
-  #logo-words{
-    font-family: 'Amatic SC', cursive;
-    color: white;
-    position: absolute;
-    bottom: -8%;
-    left:5%;
-    font-size: 20px;
   
-  }
 
   .description {
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Cabin', sans-serif;
     font-size: 30px;
     position: absolute;
     top: 50%;
@@ -164,4 +131,39 @@ body{
     display: none;
   }
  
+  .image-container {
+  margin-top: 5%;
+   height: 15%;
+  width: 90%;
+  padding: 0px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns:repeat(6, 1fr) ;
+ 
 
+  }
+.image1 {
+  grid-column:1/2;
+}
+.image2 {
+  grid-column:2/3;
+}
+.image3 {
+  grid-column:3/4;
+}
+.image4 {
+  grid-column:4/5;
+}
+.image5 {
+  grid-column:5/6;
+}
+.image6 {
+  grid-column:6/7;
+}
+.imagePos{
+  margin-left: 15%;
+  border-radius: 100%;
+}
+h5 {
+  text-align: center;
+}
