--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@
 .form-container {
   font-family: 'Cabin', sans-serif;
   font-size: 30px;
-  color: #2A2A2A;
+  color: #e0dddd;
   text-align: center;
   width: 50%;
   height: 350px;
-  background-color: #e0e0e2;
+  background-color: #626468;
   position: relative;
   margin-left: 25%;
   margin-top: 10%; }
@@ -64,20 +64,20 @@
 
 h3 {
   position: absolute;
-  left: 15%; }
+  left: 14%; }
 
 [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:after {
-  background-color: #2A2A2A; }
+  background-color: #e0dddd; }
 
 [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:before, [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #2A2A2A; }
+  border: 2px solid #e0dddd; }
 
 [type="radio"]:not(:checked) + label:before, [type="radio"]:not(:checked) + label:after {
-  border: 2px solid #2A2A2A; }
+  border: 2px solid #e0dddd; }
 
 [type="radio"]:not(:checked) + label, [type="radio"]:checked + label {
   font-family: 'Cabin', sans-serif;
-  color: #2A2A2A;
+  color: #e0dddd;
   font-size: 25px;
   letter-spacing: 1px;
   line-height: 1.2; }
@@ -145,7 +145,7 @@ h3 {
   top: 80%;
   border-radius: 10px;
   background-color: #f2a22b;
-  width: 136px;
+  width: 142px;
   height: 48px;
   font-size: 25px; }
 
@@ -200,43 +200,43 @@ h3 {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  left: 30px; }
+  top: 20%;
+  left: 6%; }
 
 #valueTwo {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  left: 130px; }
+  top: 20%;
+  left: 21%; }
 
 #valueThree {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  left: 230px; }
+  top: 20%;
+  left: 38%; }
 
 #valueFour {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  right: 230px; }
+  top: 20%;
+  right: 37%; }
 
 #valueFive {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  right: 130px; }
+  top: 20%;
+  right: 21%; }
 
 #valueSix {
   width: 60px;
   height: 60px;
   position: absolute;
-  top: 70px;
-  right: 30px; }
+  top: 20%;
+  right: 6%; }
 
 label > input {
   /* HIDE RADIO */
@@ -358,13 +358,13 @@ h4 {
 
 .trip-cost > p {
   text-align: center;
-  background-color: #76b2b7;
+  background-color: #626468;
   font-size: 30px;
-  color: white;
   margin-bottom: 0px;
   font-family: 'Cabin', sans-serif;
   border: 1px solid black;
-  border-bottom: none; }
+  border-bottom: none;
+  color: #e0dddd; }
 
 .style {
   border: 1px solid black;
@@ -389,28 +389,84 @@ h4 {
   font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
+@media screen and (max-width: 990px) and (min-width: 740px) {
+  #logo {
+    width: 26% !important;
+    left: 37% !important;
+    top: 3% !important; }
+
+  #logo2 {
+    left: 24% !important;
+    width: 56% !important; }
+
+  #begin {
+    top: 64% !important;
+    left: 32% !important; }
+
+  #header {
+    height: 16vh !important; }
+
+  .image-container {
+    grid-template-columns: repeat(3, 1fr) !important; }
+
+  .image4 {
+    grid-column: 1/2 !important; }
+
+  .image5 {
+    grid-column: 2/3 !important; }
+
+  .image6 {
+    grid-column: 3/4 !important; }
+
+  .form-container {
+    margin-top: 40% !important;
+    width: 80% !important;
+    margin-left: 10% !important; }
+
+  h3 {
+    left: 12% !important; } }
+@media screen and (max-height: 900px) and (min-height: 500px) and (max-width: 990px) {
+  #body {
+    height: 140vh !important; }
+
+  #header {
+    height: 20vh !important; }
+
+  .form-container {
+    margin-top: 37% !important; }
+
+  #begin {
+    top: 70% !important; } }
+@media screen and (max-height: 800px) and (min-height: 500px) and (min-width: 1400px) {
+  #body {
+    height: 125vh !important; } }
 html {
   width: 100vw;
-  height: 100vh; }
+  max-width: 1536px;
+  height: 100vh;
+  overflow-x: hidden;
+  margin: 0 auto; }
 
 body {
   font-family: 'Cabin', sans-serif;
   width: 100vw;
   height: 100vh;
+  max-width: 1536px;
   margin: 0 auto; }
 
 #splash-page {
-  background-color: #e0e0e2;
+  background-color: #626468;
   width: 100vw;
   height: 100vh;
+  max-width: 1536px;
   position: absolute;
-  z-index: 2;
-  display: none; }
+  z-index: 2; }
 
 #logo2 {
   position: absolute;
   top: 25%;
-  left: 35%; }
+  left: 34%;
+  width: 35%; }
 
 #begin {
   color: white;
@@ -421,10 +477,10 @@ body {
   -webkit-tap-highlight-color: transparent;
   position: absolute;
   top: 70%;
-  left: 41%;
-  width: 200px;
-  height: 60px;
-  font-size: 40px;
+  left: 41.5%;
+  width: 285px;
+  height: 76px;
+  font-size: 52px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   cursor: pointer; }
 
@@ -432,6 +488,9 @@ body {
   position: absolute;
   width: 100vw;
   height: 100vh;
+  max-width: 1536px;
+  display: none;
+  margin: 0 auto;
   grid-template-columns: repeat(3, 1fr); }
 
 .page-container {
@@ -442,23 +501,23 @@ body {
 
 #header {
   height: 20vh;
-  background-color: #e0e0e2;
+  background-color: #626468;
   grid-column: 1/6; }
 
 #body {
-  height: 100vh;
+  height: 105vh;
   background-color: white;
   grid-column: 1/6; }
 
 #footer {
   height: 10vh;
-  background-color: #e0e0e2;
+  background-color: #626468;
   grid-column: 1/6; }
 
 #about {
   width: 80%;
   margin: 0 auto;
-  margin-top: 5%;
+  padding-top: 5%;
   font-family: 'Cabin', sans-serif;
   font-size: 22px;
   text-align: center;
@@ -467,7 +526,7 @@ body {
 #logo {
   width: 15%;
   position: absolute;
-  left: 40%;
+  left: 43%;
   top: 4%;
   cursor: pointer; }
 
