--- a/css/modules/form.css
+++ b/css/modules/form.css
@@ -16,7 +16,7 @@
 
 h3 {
   position: absolute;
-  left: 14%; }
+  left: 13%; }
 
 [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:after {
   background-color: #e0dddd; }
@@ -59,33 +59,33 @@ h3 {
 
 #pOne {
   position: absolute;
-  top: 50px;
-  left: 80px; }
+  top: 15%;
+  left: 18%; }
 
 #pTwo {
   position: absolute;
-  top: 50px;
-  left: 370px; }
+  top: 15%;
+  left: 63%; }
 
 #pThree {
   position: absolute;
-  top: 120px;
-  left: 80px; }
+  top: 34%;
+  left: 18%; }
 
 #pFour {
   position: absolute;
-  top: 120px;
-  left: 370px; }
+  top: 34%;
+  left: 63%; }
 
 #pFive {
   position: absolute;
-  top: 190px;
-  left: 80px; }
+  top: 54%;
+  left: 18%; }
 
 #pSix {
   position: absolute;
-  top: 190px;
-  left: 370px; }
+  top: 54%;
+  left: 63%; }
 
 .waves-effect {
   position: absolute;
