--- a/sass/modules/mediaqueries.scss
+++ b/sass/modules/mediaqueries.scss
@@ -38,6 +38,12 @@
 	h3 {
 		left:12% !important;
 	}
+	#passengers {
+		    left: 26% !important;
+	}
+	#travel{
+		left:23% !important;
+	}
 }
 
 
@@ -61,5 +67,42 @@
 @media screen and (max-height: 800px) and (min-height: 500px) and (min-width: 1400px) {
 	#body {
 		height: 125vh !important;
+	}
+}
+@media screen and (min-width:375px) and (max-width: 740px) {
+	.image-container {
+		    grid-template-columns: repeat(2, 1fr) !important;
+		    width: 100% !important;
+	}
+
+	.image3 {
+		grid-column: 1/2 !important;
+	}
+	.image4 {
+		grid-column: 2/3 !important;
+	}
+	.image5 {
+		grid-column: 1/2 !important;
+	}
+	.image6 {
+		grid-column: 2/3 !important;
+	}
+	.imagePos {
+		width: 75%;
+	}
+	#body {
+		height: 200vh !important;
+	}
+	.form-container {
+		margin-top: 125%!important;
+		width: 95% !important;
+		margin-left: 2% !important;
+	}
+	h5 {
+		font-size: 18px;
+	}
+	h3 {
+		font-size: 25px;
+		left: 8% !important;
 	}
 }
