--- a/sass/modules/form.scss
+++ b/sass/modules/form.scss
@@ -8,7 +8,8 @@
     background-color: #626468;
     position: relative;
     margin-left: 25%;  
-    margin-top: 10%; 
+    margin-bottom:20px;
+    margin-top: 20px;
 
 
     
@@ -113,7 +114,7 @@
     top:80%;
     border-radius: 10px;
     background-color:  #f2a22b;
-    width: 142px;
+    width: 205px;
     height: 48px;
     font-size: 25px;
     
