--- a/css/modules/form.css
+++ b/css/modules/form.css
@@ -8,7 +8,8 @@
   background-color: #626468;
   position: relative;
   margin-left: 25%;
-  margin-top: 10%; }
+  margin-bottom: 20px;
+  margin-top: 20px; }
 
 .contain {
   width: 0%;
@@ -97,7 +98,7 @@ h3 {
   top: 80%;
   border-radius: 10px;
   background-color: #f2a22b;
-  width: 142px;
+  width: 205px;
   height: 48px;
   font-size: 25px; }
 
