--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,3 @@
-.carousel {
-  width: 20%;
-  height: 20%;
-  margin: 0 auto; }
-
-.slider {
-  width: 600px;
-  height: 150px;
-  margin: 0 auto;
-  text-align: center;
-  margin-top: -40px; }
-
-.slide-h3 {
-  margin: 40% 0 0 0;
-  padding: 20% 20%;
-  width: 150px;
-  height: 150px; }
-
-.slide-h3 > p {
-  font-family: 'Cabin', sans-serif;
-  color: black;
-  font-size: 15px;
-  margin-left: -64px;
-  margin-top: -2px; }
-
-*, *:before, *:after {
-  box-sizing: content-box; }
-
-.slider div {
-  margin-right: 5px; }
-
-.slick-slide {
-  opacity: .4;
-  width: 10px; }
-
-.slick-center {
-  opacity: 1; }
-
-.slick-prev:before, .slick-next:before {
-  color: black;
-  line-height: 5.5;
-  font-size: 25px;
-  opacity: 1; }
-
-.slick-arrow:before {
-  display: inline;
-  margin-right: 150px; }
-
 .form-container {
   font-family: 'Cabin', sans-serif;
   font-size: 30px;
@@ -56,7 +8,8 @@
   background-color: #626468;
   position: relative;
   margin-left: 25%;
-  margin-top: 10%; }
+  margin-bottom: 20px;
+  margin-top: 20px; }
 
 .contain {
   width: 0%;
@@ -145,7 +98,7 @@ h3 {
   top: 80%;
   border-radius: 10px;
   background-color: #f2a22b;
-  width: 142px;
+  width: 205px;
   height: 48px;
   font-size: 25px; }
 
@@ -389,230 +342,6 @@ h4 {
   font-family: 'Cabin', sans-serif;
   font-size: 20px; }
 
-@media screen and (max-width: 951px) and (min-width: 685px) {
-  #logo {
-    width: 26% !important;
-    left: 37% !important;
-    top: 3% !important; }
-
-  #logo2 {
-    left: 24% !important;
-    width: 56% !important; }
-
-  #begin {
-    top: 64% !important;
-    left: 32% !important; }
-
-  #header {
-    height: 16vh !important; }
-
-  .image-container {
-    grid-template-columns: repeat(3, 1fr) !important; }
-
-  .image4 {
-    grid-column: 1/2 !important; }
-
-  .image5 {
-    grid-column: 2/3 !important; }
-
-  .image6 {
-    grid-column: 3/4 !important; }
-
-  .form-container {
-    margin-top: 40% !important;
-    width: 80% !important;
-    margin-left: 10% !important; }
-
-  h3 {
-    left: 12% !important; }
-
-  #passengers {
-    left: 26% !important; }
-
-  #travel {
-    left: 23% !important; } }
-@media screen and (max-height: 900px) and (min-height: 500px) and (max-width: 951px) {
-  #body {
-    height: 140vh !important; }
-
-  #header {
-    height: 20vh !important; }
-
-  .form-container {
-    margin-top: 40% !important; }
-
-  #begin {
-    top: 70% !important; } }
-@media screen and (max-height: 800px) and (min-height: 500px) and (min-width: 951px) {
-  #body {
-    height: 125vh !important; } }
-@media screen and (max-width: 685px) and (min-width: 375px) {
-  .image-container {
-    grid-template-columns: repeat(2, 1fr) !important;
-    width: 100% !important; }
-
-  .image3 {
-    grid-column: 1/2 !important; }
-
-  .image4 {
-    grid-column: 2/3 !important; }
-
-  .image5 {
-    grid-column: 1/2 !important; }
-
-  .image6 {
-    grid-column: 2/3 !important; }
-
-  .imagePos {
-    width: 60%; }
-
-  #body {
-    height: 176vh !important; }
-
-  #logo {
-    width: 40% !important;
-    left: 31% !important; }
-
-  .form-container {
-    margin-top: 88% !important;
-    width: 95% !important;
-    margin-left: 2% !important; }
-
-  h5 {
-    font-size: 18px; }
-
-  h3 {
-    font-size: 25px;
-    left: 8% !important; }
-
-  [type="radio"]:not(:checked) + label, [type="radio"]:checked + label {
-    font-size: 22px !important; }
-
-  #one {
-    top: 17%;
-    left: 9%; }
-
-  #two {
-    top: 20%;
-    left: 53%; }
-
-  #three {
-    top: 44%;
-    left: 9%; }
-
-  #four {
-    top: 44%;
-    left: 53%; }
-
-  .btn-large {
-    width: 88px;
-    height: 48px;
-    font-size: 15px; }
-
-  #pOne {
-    top: 12%;
-    left: 8%; }
-
-  #pTwo {
-    top: 12%;
-    left: 55%; }
-
-  #pThree {
-    top: 30%;
-    left: 8%; }
-
-  #pFour {
-    top: 30%;
-    left: 55%; }
-
-  #pFive {
-    top: 50%;
-    left: 8%; }
-
-  #pSix {
-    top: 50%;
-    left: 55%; }
-
-  .previous {
-    left: 20px; }
-
-  .waves-effect {
-    right: 20px; }
-
-  #valueOne, #valueTwo, #valueThree, #valueFour,
-  #valueFive, #valueSix {
-    width: 40px !important;
-    height: 40px !important; }
-
-  #valueThree {
-    left: 36% !important; }
-
-  #valueFour {
-    right: 36% !important; }
-
-  #plus {
-    right: 65px !important; }
-
-  #minus {
-    left: 80px !important; }
-
-  #logo2 {
-    left: 8% !important;
-    width: 86% !important; }
-
-  #begin {
-    left: 12.5% !important; }
-
-  #vehicleOne {
-    width: 127px !important;
-    left: 9% !important; }
-
-  #vehicleTwo {
-    width: 135px !important;
-    left: 9% !important; }
-
-  #vehicleThree {
-    width: 143px !important;
-    left: 51% !important; }
-
-  #vehicleFour {
-    width: 148px !important;
-    left: 51% !important; }
-
-  #vehicleOne > img {
-    width: 120px !important;
-    height: 85px !important; }
-
-  #vehicleTwo > img {
-    width: 144px !important;
-    height: 83px !important; }
-
-  #vehicleThree > img {
-    width: 121px !important;
-    height: 91px !important; }
-
-  #vehicleFour > img {
-    width: 150px !important;
-    height: 88px !important r; }
-
-  #vehicle {
-    font-size: 23px !important;
-    left: 25% !important;
-    margin-top: 2px !important; }
-
-  #error {
-    right: 17px !important;
-    top: 17px !important;
-    font-size: 12px !important; } }
-@media screen and (max-height: 800px) and (min-height: 700px) and (max-width: 685px) and (min-width: 470px) {
-  #body {
-    height: 178vh !important; }
-
-  #header {
-    height: 16vh !important; } }
-@media screen and (max-height: 800px) and (min-height: 700px) and (max-width: 470px) {
-  #body {
-    height: 160vh !important; } }
 html {
   width: 100vw;
   height: 100vh;
@@ -624,6 +353,16 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0 auto; }
+
+.resize-messagebox {
+  display: none;
+  height: 100vh; }
+
+.resize-message {
+  padding-top: 82%;
+  padding-left: 9%;
+  font-size: 25px;
+  margin: 0; }
 
 #splash-page {
   background-color: #626468;
@@ -669,17 +408,16 @@ body {
   margin: 0 auto; }
 
 #header {
-  height: 20vh;
+  padding: 85px;
   background-color: #626468;
   grid-column: 1/6; }
 
 #body {
-  height: 105vh;
   background-color: white;
   grid-column: 1/6; }
 
 #footer {
-  height: 10vh;
+  padding: 40px;
   background-color: #626468;
   grid-column: 1/6; }
 
