--- a/sass/modules/modal.scss
+++ b/sass/modules/modal.scss
@@ -1,7 +1,7 @@
 .modal-content{
 	width:500px;
-	margin-left:30px;
-	height: 450px;
+	margin-left:48px;
+	height: 500px;
 
 }
 .open{
@@ -53,14 +53,11 @@ h4{
 .style > p{
 	margin-left:10px;
 }
-.modal-button{
-	top:152%;
-	font-family: 'Cabin', sans-serif;
-	font-size: 20px;
-}
+
 .modal-button2{
-	top:152%;
+	top:150%;
 	font-family: 'Cabin', sans-serif;
 	font-size: 20px;
+	left:32%;
 }
 
