--- a/css/modules/modal.css
+++ b/css/modules/modal.css
@@ -1,7 +1,7 @@
 .modal-content {
   width: 500px;
-  margin-left: 30px;
-  height: 450px; }
+  margin-left: 48px;
+  height: 500px; }
 
 .open {
   width: 600px;
@@ -47,14 +47,10 @@ h4 {
 .style > p {
   margin-left: 10px; }
 
-.modal-button {
-  top: 152%;
-  font-family: 'Cabin', sans-serif;
-  font-size: 20px; }
-
 .modal-button2 {
-  top: 152%;
+  top: 150%;
   font-family: 'Cabin', sans-serif;
-  font-size: 20px; }
+  font-size: 20px;
+  left: 32%; }
 
 /*# sourceMappingURL=modal.css.map */
