--- a/sass/modules/mediaqueries.scss
+++ b/sass/modules/mediaqueries.scss
@@ -228,7 +228,7 @@
 	.modal .modal-content {
 		padding: 10px !important;
 		width:90% !important;
-		margin-left:10px !important;
+		margin-left:18px !important;
 	}
 	.modalImage {
 		width:250px !important;
@@ -238,11 +238,10 @@
 		height: 70px !important;
 		font-size: 22px !important;
 	}
-	.modal-button {
-		top:140% !important;
-	}
+	
 	.modal-button2 {
 		top:140% !important;
+		left:30% !important;
 	}
 	
 	
