--- a/css/modules/mediaqueries.css
+++ b/css/modules/mediaqueries.css
@@ -215,7 +215,10 @@
 
   .modal-button2 {
     top: 140% !important;
-    left: 30% !important; } }
+    left: 30% !important; }
+
+  #travel {
+    font-size: 29px !important; } }
 @media screen and (max-width: 355px) {
   .page-container {
     display: none; }
