--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,10 @@ h4 {
 
   .modal-button2 {
     top: 140% !important;
-    left: 30% !important; } }
+    left: 30% !important; }
+
+  #travel {
+    font-size: 29px !important; } }
 @media screen and (max-width: 355px) {
   .page-container {
     display: none; }
