--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,10 @@ h4 {
     left: 30% !important; }
 
   #travel {
-    font-size: 29px !important; } }
+    font-size: 27px !important; }
+
+  #passengers {
+    font-size: 27px !important; } }
 @media screen and (max-width: 355px) {
   .page-container {
     display: none; }
