--- a/sass/modules/mediaqueries.scss
+++ b/sass/modules/mediaqueries.scss
@@ -244,7 +244,10 @@
 		left:30% !important;
 	}
 	#travel {
-		font-size: 29px!important;
+		font-size: 27px!important;
+	}
+	#passengers {
+		font-size: 27px!important;
 	}
 	
 	
