--- a/css/modules/mediaqueries.css
+++ b/css/modules/mediaqueries.css
@@ -231,5 +231,8 @@
 
   .resize-messagebox {
     display: block !important; } }
+@media screen and (min-height: 1000px) and (min-width: 1500px) {
+  #logo {
+    top: 1%; } }
 
 /*# sourceMappingURL=mediaqueries.css.map */
