--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ h4 {
     display: block !important; } }
 @media screen and (min-height: 1000px) and (min-width: 1500px) {
   #logo {
-    top: 1%; } }
+    top: 1% !important; } }
 html {
   width: 100vw;
   height: 100vh;
