--- a/css/modules/mediaqueries.css
+++ b/css/modules/mediaqueries.css
@@ -233,6 +233,6 @@
     display: block !important; } }
 @media screen and (min-height: 1000px) and (min-width: 1500px) {
   #logo {
-    top: 1%; } }
+    top: 1% !important; } }
 
 /*# sourceMappingURL=mediaqueries.css.map */
